# PrintFlow-RIP-app

./: .gitignore  CMakeLists.txt  ColorManagementManager.cpp  ColorManagementManager.h  ColorProfile.cpp  Dev_Build_App.sh  ImageEditor.cpp  ImageEditor.h  ImageLoader.cpp  ImageLoader.h  LICENSE  MultiInkLinearization.cpp  MultiInkScreenEngine.cpp  MultiInkScreenEngine.h  MultiInkTypes.h  NocaiDirectPrintClient.cpp  PrintJob.h  PrintJobModel.cpp  PrintJobModel.h  PrintJobMultiInk.cpp  PrintJobMultiInk.h  PrintJobNocai.cpp  PrintJobNocai.h  PrintJobOutput.cpp  README.md  ToDoList  devBuild.sh  main.cpp  qml.qrc  rip-app.desktop
android/: AndroidManifest.xml
assets/: RIP_App_1440_Plain_Default.icc  RIP_App_Linearization_1200_8C.xml
docs/: README.md  RIP-APP_Flowchart.drawio  RIP-App_Software_Design_Document.docx
packaging/linux/: printflow.desktop
qml/: ColorManagementView.qml  DraggableItem.qml  ImageEditorView.qml  ImpositionView.qml  JobDetailsView.qml  JobListView.qml  Main.qml  PrinterMaintenanceView.qml  PrinterSetupView.qml  Theme.qml  ToolTip.qml
resources/: qml.qrc
resources/assets/: RIP_App_1440_Plain_Neutral.icc  RIP_App_Linearization_1200_4C.xml
resources/i18n/: strings.json  strings.zh-Hans.json
resources/qml/: ColorManagementView.qml  ImageEditorView.qml  ImpositionView.qml  JobDetailsView.qml  JobListView.qml  Main.qml  PrinterSetupView.qml  Theme.qml  ThemedButton.qml
resources/themes/default/: theme.json
resources/themes/nocai/: theme.json
resources/themes/xante/: theme.json
scripts/: Relax_ImageMagick_Limits.sh  android_build_install_run.sh  dev_build_android.sh  dev_build_linux.sh  install_android_dependencies.sh  package_linux_appimage.sh  run_android_emulator.sh  run_tests.sh  setup_android_emulator.sh  start_android_emulator.sh
src/app/: main.cpp
src/core/: AppStrings.cpp  AppStrings.h  AssetManager.cpp  AssetManager.h  ColorManagementManager.h  IPrintOutputClient.h  ImageImportManager.cpp  ImageImportManager.h  PlatformCapabilities.cpp  PlatformCapabilities.h  PrintJobModel.cpp  PrintJobModel.h  ThemeManager.cpp  ThemeManager.h
src/platform/android/: ColorProfile.cpp  ColorProfile.h  ImageEditor.cpp  ImageEditor.h  ImageLoader.cpp  ImageLoader.h  PrintJobCMYK.cpp  PrintJobCMYK.h  PrintJobMultiInk.cpp  PrintJobMultiInk.h  PrintJobNocai.cpp  PrintJobNocai.h  PrintJobOutput.cpp  PrintJobOutput.h
src/rip/: ColorProfile.h  ImageLoader.cpp  MultiInkLinearization.h  MultiInkToneBuilder.cpp  MultiInkToneBuilder.h  PrintJobCMYK.cpp  PrintJobCMYK.h  PrintJobMultiInk.cpp  PrintJobMultiInk.h  PrintJobNocai.h
tests/: AndroidStubTest.cpp  AppStringsTest.cpp  AssetPlatformTest.cpp  CMakeLists.txt  DirectPrintClientUnavailableTest.cpp  NocaiPrnWriterTest.cpp  PrintJobCMYKAssetManagerTest.cpp  PrintJobModelTest.cpp  RipPipelineTest.cpp  ThemeManagerTest.cpp  VendorIsolationTest.cpp
