cmake_minimum_required(VERSION 3.16)

project(PrintFlow VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

enable_testing()

option(RIP_ANDROID_ENABLE_RIP_PROCESSING "Build Android with the native RIP dependency stack instead of boot-safe stubs." OFF)
option(RIP_EMBED_BLUE_NOISE_MASKS "Embed local blue-noise TIFF masks into the Qt resource bundle." OFF)
set(RIP_THEME "default" CACHE STRING "Built-in theme id to embed as the selected theme: default, nocai, or xante.")
set(RIP_THEME_FILE "" CACHE FILEPATH "Optional custom theme JSON file to embed instead of a built-in selected theme.")
set_property(CACHE RIP_THEME PROPERTY STRINGS default nocai xante)

find_package(Qt6 REQUIRED COMPONENTS Core Gui Quick Concurrent Widgets QuickControls2 Test Xml)

set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

set(RIP_CORE_SOURCES
    src/app/main.cpp
    src/core/AppStrings.h src/core/AppStrings.cpp
    src/core/AssetManager.h src/core/AssetManager.cpp
    src/core/ColorManagementManager.h src/core/ColorManagementManager.cpp
    src/core/ImageImportManager.h src/core/ImageImportManager.cpp
    src/core/IPrintOutputClient.h
    src/core/PlatformCapabilities.h src/core/PlatformCapabilities.cpp
    src/core/PrintJob.h
    src/core/PrintJobModel.h src/core/PrintJobModel.cpp
    src/core/ThemeManager.h src/core/ThemeManager.cpp
    src/vendor/nocai/NocaiDirectPrintClient.h src/vendor/nocai/NocaiDirectPrintClient.cpp
    src/vendor/nocai/NocaiPrnWriter.h src/vendor/nocai/NocaiPrnWriter.cpp
)

set(RIP_NATIVE_SOURCES
    src/rip/ColorProfile.h src/rip/ColorProfile.cpp
    src/rip/ImageEditor.h src/rip/ImageEditor.cpp
    src/rip/ImageLoader.h src/rip/ImageLoader.cpp
    src/rip/MultiInkLinearization.h src/rip/MultiInkLinearization.cpp
    src/rip/MultiInkScreenEngine.h src/rip/MultiInkScreenEngine.cpp
    src/rip/MultiInkToneBuilder.h src/rip/MultiInkToneBuilder.cpp
    src/rip/MultiInkTypes.h
    src/rip/PrintJobMultiInk.h src/rip/PrintJobMultiInk.cpp
    src/rip/PrintJobCMYK.h src/rip/PrintJobCMYK.cpp
)

set(RIP_ANDROID_STUB_SOURCES
    src/platform/android/ColorProfile.h src/platform/android/ColorProfile.cpp
    src/platform/android/ImageEditor.h src/platform/android/ImageEditor.cpp
    src/platform/android/ImageLoader.h src/platform/android/ImageLoader.cpp
    src/platform/android/PrintJobMultiInk.h src/platform/android/PrintJobMultiInk.cpp
    src/platform/android/PrintJobCMYK.h src/platform/android/PrintJobCMYK.cpp
)

if(ANDROID AND NOT RIP_ANDROID_ENABLE_RIP_PROCESSING)
    set(RIP_PROCESSING_SOURCES ${RIP_ANDROID_STUB_SOURCES})
else()
    find_package(PkgConfig REQUIRED)
    pkg_check_modules(ImageMagick REQUIRED IMPORTED_TARGET Magick++)
    pkg_check_modules(LCMS REQUIRED IMPORTED_TARGET lcms2)
    set(RIP_PROCESSING_SOURCES ${RIP_NATIVE_SOURCES})
endif()

if(ANDROID)
    set(RIP_PLATFORM_SOURCES
        src/platform/android/PrintJobOutput.h src/platform/android/PrintJobOutput.cpp
    )
else()
    set(RIP_PLATFORM_SOURCES
        src/platform/desktop/PrintJobOutput.h src/platform/desktop/PrintJobOutput.cpp
    )
endif()

qt_add_executable(PrintFlow
    ${RIP_CORE_SOURCES}
    ${RIP_PROCESSING_SOURCES}
    ${RIP_PLATFORM_SOURCES}
    src/third_party/stb/stb_image.h
)

target_include_directories(PrintFlow PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    src/app
    src/core
    src/third_party/stb
    src/vendor/nocai
)

if(ANDROID AND NOT RIP_ANDROID_ENABLE_RIP_PROCESSING)
    target_include_directories(PrintFlow PRIVATE src/platform/android)
else()
    target_include_directories(PrintFlow PRIVATE src/rip)
endif()

if(ANDROID)
    target_include_directories(PrintFlow PRIVATE src/platform/android)
    if(TARGET Qt6::CorePrivate)
        target_link_libraries(PrintFlow PRIVATE Qt6::CorePrivate)
    endif()
else()
    target_include_directories(PrintFlow PRIVATE src/platform/desktop)
endif()

target_link_libraries(PrintFlow
    PRIVATE
        Qt6::Quick
        Qt6::Concurrent
        Qt6::QuickControls2
        Qt6::Widgets
        Qt6::Xml
)

if(NOT ANDROID)
    find_path(CUPS_INCLUDE_DIR cups/cups.h PATH_SUFFIXES cups)
    find_library(CUPS_LIBRARY NAMES cups)

    if(CUPS_INCLUDE_DIR AND CUPS_LIBRARY)
        message(STATUS "CUPS found: ${CUPS_LIBRARY}")
        target_include_directories(PrintFlow PRIVATE ${CUPS_INCLUDE_DIR})
        target_link_libraries(PrintFlow PRIVATE ${CUPS_LIBRARY})
    else()
        message(FATAL_ERROR "CUPS library not found")
    endif()
endif()

if(NOT ANDROID OR RIP_ANDROID_ENABLE_RIP_PROCESSING)
    target_link_libraries(PrintFlow
        PRIVATE
            PkgConfig::ImageMagick
            PkgConfig::LCMS
    )
endif()

if(ANDROID AND RIP_ANDROID_ENABLE_RIP_PROCESSING)
    target_compile_definitions(PrintFlow PRIVATE RIP_ANDROID_ENABLE_RIP_PROCESSING=1)
endif()

set(RIP_BUILTIN_THEMES default nocai xante)
if(RIP_THEME_FILE)
    if(NOT EXISTS "${RIP_THEME_FILE}")
        message(FATAL_ERROR "RIP_THEME_FILE does not exist: ${RIP_THEME_FILE}")
    endif()

    file(READ "${RIP_THEME_FILE}" RIP_CUSTOM_THEME_JSON)
    string(JSON RIP_CUSTOM_THEME_ID ERROR_VARIABLE RIP_CUSTOM_THEME_JSON_ERROR GET "${RIP_CUSTOM_THEME_JSON}" id)
    if(RIP_CUSTOM_THEME_JSON_ERROR)
        message(FATAL_ERROR "RIP_THEME_FILE is invalid JSON or is missing required field 'id': ${RIP_CUSTOM_THEME_JSON_ERROR}")
    endif()
    foreach(required_field displayName appName)
        string(JSON RIP_CUSTOM_THEME_REQUIRED_VALUE ERROR_VARIABLE RIP_CUSTOM_THEME_REQUIRED_ERROR GET "${RIP_CUSTOM_THEME_JSON}" "${required_field}")
        if(RIP_CUSTOM_THEME_REQUIRED_ERROR OR RIP_CUSTOM_THEME_REQUIRED_VALUE STREQUAL "")
            message(FATAL_ERROR "RIP_THEME_FILE is missing required field '${required_field}': ${RIP_THEME_FILE}")
        endif()
    endforeach()

    set(RIP_SELECTED_THEME_RESOURCE ":/themes/custom/theme.json")
    set(RIP_GENERATED_THEME_DIR "${CMAKE_CURRENT_BINARY_DIR}/generated/resources/themes/custom")
    file(MAKE_DIRECTORY "${RIP_GENERATED_THEME_DIR}")
    configure_file("${RIP_THEME_FILE}" "${RIP_GENERATED_THEME_DIR}/theme.json" COPYONLY)
    set(RIP_CUSTOM_THEME_RESOURCE_FILE "${RIP_GENERATED_THEME_DIR}/theme.json")
    message(STATUS "Selected custom theme file: ${RIP_THEME_FILE}")
else()
    if(NOT RIP_THEME IN_LIST RIP_BUILTIN_THEMES)
        message(FATAL_ERROR "Unknown RIP_THEME '${RIP_THEME}'. Expected one of: ${RIP_BUILTIN_THEMES}")
    endif()

    set(RIP_SELECTED_THEME_RESOURCE ":/themes/${RIP_THEME}/theme.json")
    message(STATUS "Selected built-in theme: ${RIP_THEME}")
endif()

target_compile_definitions(PrintFlow PRIVATE
    RIP_SELECTED_THEME_RESOURCE="${RIP_SELECTED_THEME_RESOURCE}"
)

set(DIRECT_PRINT_SDK_ROOT "$ENV{DIRECT_PRINT_SDK_ROOT}" CACHE PATH "Local vendor direct-print SDK root. This path is intentionally not committed.")
if(NOT DIRECT_PRINT_SDK_ROOT)
    set(DIRECT_PRINT_SDK_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/DemoForARM64Linux-260612/Demo260612")
endif()

if(ANDROID)
    set(DIRECT_PRINT_SDK_LIBRARY "${DIRECT_PRINT_SDK_ROOT}/libSYPrintAPIforPROII.so")
    if(EXISTS "${DIRECT_PRINT_SDK_LIBRARY}")
        message(STATUS "Android direct-print SDK library: ${DIRECT_PRINT_SDK_LIBRARY}")
        set_property(TARGET PrintFlow APPEND PROPERTY QT_ANDROID_EXTRA_LIBS "${DIRECT_PRINT_SDK_LIBRARY}")
    else()
        message(WARNING "Android direct-print SDK library not found at ${DIRECT_PRINT_SDK_LIBRARY}. The APK can still boot, but direct print will report unavailable.")
    endif()

    set_target_properties(PrintFlow PROPERTIES
        QT_ANDROID_APP_NAME "PrintFlow"
        QT_ANDROID_PACKAGE_NAME "com.ripapp.printer"
        QT_ANDROID_VERSION_NAME "${PROJECT_VERSION}"
        QT_ANDROID_VERSION_CODE 1
        QT_ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android"
    )
endif()

file(GLOB RIP_QML_FILES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/qml/*.qml"
)

set(RIP_ASSET_FILES
    resources/assets/logo.png
    resources/assets/RIP_App_1440_Plain_Default.icc
    resources/assets/RIP_App_1440_Plain_Neutral.icc
    resources/assets/RIP_App_1200_8C.icc
    resources/assets/RIP_App_1200_4C.icc
    resources/assets/RIP_App_Linearization_1200_4C.xml
    resources/assets/RIP_App_Linearization_1200_8C.xml
    resources/assets/RIP_App_Generic_CMYK.icc
    resources/assets/sRGBProfile.icm
)

set(RIP_I18N_FILES
    resources/i18n/strings.json
    resources/i18n/strings.zh-Hans.json
)

file(GLOB_RECURSE RIP_THEME_FILES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/themes/*/theme.json"
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/themes/*/assets/*"
    "${CMAKE_CURRENT_SOURCE_DIR}/resources/vendor/*/assets/*"
)

if(RIP_EMBED_BLUE_NOISE_MASKS)
    file(GLOB RIP_BLUE_NOISE_MASKS CONFIGURE_DEPENDS
        "${CMAKE_CURRENT_SOURCE_DIR}/resources/assets/blue_noise_mask_512_12000/*.tiff"
    )

    if(RIP_BLUE_NOISE_MASKS)
        list(APPEND RIP_ASSET_FILES ${RIP_BLUE_NOISE_MASKS})
    else()
        message(WARNING "Blue-noise mask TIFFs were not found under resources/assets/blue_noise_mask_512_12000.")
    endif()
else()
    message(STATUS "Blue-noise mask resource embedding is disabled. Set RIP_EMBED_BLUE_NOISE_MASKS=ON to package local masks into the Qt resource bundle.")
endif()

qt_add_resources(PrintFlow "app_resources"
    PREFIX "/"
    BASE "resources"
    FILES
        ${RIP_QML_FILES}
        ${RIP_ASSET_FILES}
        ${RIP_I18N_FILES}
        ${RIP_THEME_FILES}
)

if(RIP_CUSTOM_THEME_RESOURCE_FILE)
    qt_add_resources(PrintFlow "custom_theme_resource"
        PREFIX "/"
        BASE "${CMAKE_CURRENT_BINARY_DIR}/generated/resources"
        FILES
            "${RIP_CUSTOM_THEME_RESOURCE_FILE}"
    )
endif()

set_target_properties(PrintFlow PROPERTIES
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

include(GNUInstallDirs)
install(TARGETS PrintFlow
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)

if(NOT ANDROID)
    add_subdirectory(tests)
endif()
